--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -75,7 +75,7 @@ jobs:
         sudo apt-get update --fix-missing -y
         sudo apt-get upgrade -y
 
-        #  sudo apt-get install -y clang
+        sudo apt-get install -y clang
 
         sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
         bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib \
