--- a/.config
+++ b/.config
@@ -7096,9 +7096,9 @@ CONFIG_PACKAGE_sing-box=y
 #
 # Select build options
 #
-# CONFIG_SINGBOX_WITH_ACME is not set
+CONFIG_SINGBOX_WITH_ACME=y
 CONFIG_SINGBOX_WITH_CLASH_API=y
-# CONFIG_SINGBOX_WITH_DHCP is not set
+CONFIG_SINGBOX_WITH_DHCP=y
 CONFIG_SINGBOX_WITH_ECH=y
 # CONFIG_SINGBOX_WITH_EMBEDDED_TOR is not set
 # CONFIG_SINGBOX_WITH_GRPC is not set
@@ -7123,7 +7123,7 @@ CONFIG_SINGBOX_WITH_WIREGUARD=y
 # CONFIG_PACKAGE_snowflake-proxy is not set
 # CONFIG_PACKAGE_snowflake-server is not set
 CONFIG_PACKAGE_socat=y
-# CONFIG_SOCAT_SSL is not set
+CONFIG_SOCAT_SSL=y
 # CONFIG_PACKAGE_softflowd is not set
 # CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_speedtest-netperf is not set
