--- a/.config
+++ b/.config
@@ -6212,7 +6212,7 @@ CONFIG_PACKAGE_ddns-scripts-pdns=y
 CONFIG_PACKAGE_ddns-scripts-route53=y
 CONFIG_PACKAGE_ddns-scripts-services=y
 CONFIG_PACKAGE_ddns-scripts-transip=y
-# CONFIG_PACKAGE_ddns-scripts-utils is not set
+CONFIG_PACKAGE_ddns-scripts-utils=y
 # CONFIG_PACKAGE_dhcp-forwarder is not set
 # CONFIG_PACKAGE_dhtd is not set
 # CONFIG_PACKAGE_dns-over-https is not set
